feat: expose cosId, domainId and isGlobalAdmin on user info (#201)
