# app/docs/openapi.yaml
@@ -32,6 +32,12 @@ components:
           type: string
         type:
           type: string
+        cosId:
+          type: string
+        domainId:
+          type: string
+        isGlobalAdmin:
+          type: boolean
 paths:
   /internal/users:
     post:
